# cede-labgrid

./: .gitignore  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  places.yaml  pyproject.toml  resources.yaml
.github/workflows/: cede-smoke.yml  docker-target-workflow.yml
cede_labgrid/: __init__.py
cede_labgrid/cli/: __init__.py  deploy.py
cede_labgrid/drivers/: __init__.py  avrdude_flash.py  cede_i2c.py  cede_reset.py  cede_validation.py  picotool_flash.py
cede_labgrid/protocols/: __init__.py  flash.py
cede_labgrid/strategies/: __init__.py  cede_strategy.py
demo_apps/: .gitignore
demo_apps/pi/ssd1306_eyes/: Makefile  README.md  cede_app.yaml  dirty_stats.py  eyes_anim.py  eyes_draw.py  (+2 more)
docs/: APP_DEVELOPMENT.md  BOOT_IMAGES.md  BOOT_MEDIA_FLASH.md  CONTAINER_BOOTSTRAP.md  GLOSSARY.md  TOOLCHAINS.md
env/: cede-pi-exporter.yaml  pi.yaml  pico.yaml  remote.yaml  uno.yaml
lab/config/: lab.example.yaml  lab.schema.json
lab/docker/: Makefile  TOOLCHAIN_VERSIONS  docker-compose.gateway.yml  docker-compose.platform-amd64.yml  docker-compose.platform-arm64.yml  docker-compose.yml
lab/docs/: applications.md  deploy-lab-stack-app.md  dev-preflight.md  staged-bootstrap.md
lab/pi/: Makefile  bootstrap.sh
lab/pico/hello_lab/: CMakeLists.txt
lab/pico/hello_lab/src/: main.c
lab/sensors/: catalog.yaml
lab/tests/: conftest.py  conftest_labgrid.py  test_cede_test_image_id.py  test_config_schema.py  test_docker_dev_host_matrix.py  test_docker_makefile.py  test_firmware_attest.py  test_firmware_digest.py  test_hello_lab_hardware_full.py  test_hello_lab_hardware_pico_digest.py  test_hello_lab_hardware_uno_digest.py  test_hello_lab_matrix.py  test_i2c_labgrid.py  test_lab_stack_labgrid.py  test_pi_cloud_init_render.py  test_pico_gateway_env.py  test_pico_labgrid.py  test_run_record.py  test_sd_image_labgrid.py  test_ssd1306_eyes_dirty_stats.py  test_ssh_key_sharing_e2e.py  test_toolchain_versions.py  test_uno_gateway_env.py  test_uno_labgrid.py  test_workflow_targets.py
scripts/: cede-build.sh  cede-deploy.sh  new-app.sh
templates/cede-overlay/: cede_app.yaml
templates/pico-app/: .gitignore  CMakeLists.txt  Makefile  README.md  pico_sdk_import.cmake
templates/pico-app/src/: main.c
templates/uno-app/: .gitignore  APP_NAME.ino  Makefile  README.md
(+83 files in other folders)
