[project]
name = "cede"
version = "0.1.0"
description = "CEDE lab tooling (lab.yaml validation, Raspberry Pi bootstrap helpers)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.0",
    "labgrid>=25.0",
    "pyyaml>=6.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pillow>=10,<12",
]

[tool.pytest.ini_options]
filterwarnings = [
    # pyserial 3.5 RFC2217 uses deprecated threading APIs; fixed upstream but unreleased.
    "ignore:setDaemon\\(\\) is deprecated:DeprecationWarning:serial.rfc2217",
    "ignore:setName\\(\\) is deprecated:DeprecationWarning:serial.rfc2217",
    # labgrid Step.__del__ fires when strategy transitions abort mid-step (e.g.
    # driver deactivation during state_off). Upstream issue; harmless in practice.
    "ignore:__del__ called before .* was done:UserWarning:labgrid.step",
]

[tool.uv]
package = false
